cli/tests/snapshots/cli__run_images@line1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/line1.py
---
<svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 0.5 L 30.5 30.5" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
