cli/tests/snapshots/cli__run_images@line3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/line3.py
---
<svg width="30" height="20" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 20.5 L 30.5 0.5" fill="none" stroke="rgba(255, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
