cli/tests/snapshots/cli__run_images@overlay3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/overlay3.py
---
<svg width="72.0" height="68.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 35.596747752497684 0.0 L 71.19349550499537 25.86255110086882 L 57.596747752497684 67.70903781785557 L 13.596747752497688 67.70903781785557 L 0.0 25.862551100868806 Z" fill="rgba(250, 250, 255, 1.0)" />
    <g>
      <path d="M 35.59674775249769 4.6165253057628775 L 66.33939353874568 26.952364892876858 L 54.59674775249769 63.092512512092696 L 16.596747752497688 63.092512512092696 L 4.854101966249683 26.952364892876847 Z" fill="rgba(200, 200, 255, 1.0)" />
      <g>
        <path d="M 35.596747752497684 9.233050611525762 L 61.485291572495996 28.042178684884902 L 51.59674775249769 58.47598720632981 L 19.596747752497688 58.47598720632981 L 9.70820393249937 28.042178684884895 Z" fill="rgba(150, 150, 255, 1.0)" />
        <g>
          <path d="M 35.596747752497684 13.84957591728864 L 56.63118960624632 29.131992476892943 L 48.59674775249769 53.859461900566934 L 22.596747752497688 53.859461900566934 L 14.562305898749052 29.131992476892936 Z" fill="rgba(100, 100, 255, 1.0)" />
          <path d="M 35.596747752497684 18.466101223051517 L 51.77708763999664 30.221806268900984 L 45.59674775249769 49.24293659480406 L 25.596747752497688 49.24293659480406 L 19.416407864998735 30.221806268900977 Z" fill="rgba(50, 50, 255, 1.0)" />
        </g>
      </g>
    </g>
  </g>
</svg>
