cli/tests/snapshots/cli__run_images@overlay_align2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/overlay_align2.py
---
<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0 0 L 50 0 L 50 50 L 0 50 Z" fill="rgba(46, 139, 87, 1.0)" />
    <g>
      <path d="M 10 10 L 50 10 L 50 50 L 10 50 Z" fill="rgba(192, 192, 192, 1.0)" />
      <g>
        <path d="M 20 20 L 50 20 L 50 50 L 20 50 Z" fill="rgba(46, 139, 87, 1.0)" />
        <path d="M 30 30 L 50 30 L 50 50 L 30 50 Z" fill="rgba(192, 192, 192, 1.0)" />
      </g>
    </g>
  </g>
</svg>
