cli/tests/snapshots/cli__run_images@overlay_offset1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/overlay_offset1.py
---
<svg width="90" height="90" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 90 50 A 40 40 0 0 1 10 50 A 40 40 0 0 1 90 50 Z" fill="rgba(0, 0, 255, 1.0)" />
    <path d="M 80 40 A 40 40 0 0 1 0 40 A 40 40 0 0 1 80 40 Z" fill="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
